Update HTML 03 Text Formatting.html

--- a/HTML 03 Text Formatting.html
+++ b/HTML 03 Text Formatting.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html> <!-- tells browser its a HTML file -->
 <html><!-- tag <html> indicates beginning of a web page> -->
 <head>
-<title>HTML Basic Syntax</title><!-- tag <title> indicates title of a web page in browser tab> -->
+<title>HTML Text Formatting</title><!-- tag <title> indicates title of a web page in browser tab> -->
 </head>
 
 <body>
