--- a/HTML Topics/HTML 18 Input Types.htm
+++ b/HTML Topics/HTML 18 Input Types.htm
@@ -7,14 +7,13 @@
     <title>HTML Input Types</title>
     <link rel="stylesheet" href="/CSS Topics/html.css">
 </head>
-
 <body>
     <form action="">
         <h1>Form Input Types</h1>
         <label for="uname">Username:</label>
-        <input type="text" id="uname" name="uname"><br>
+        <input type="text" id="uname" name="uname" value="Tilak" disabled><br>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br>
+        <input type="email" id="email" name="email" size="24"><br>
         <label id="pwd">Password:</label>
         <input type="password" id="pwd" name="pwd"><br>
 
@@ -32,14 +31,20 @@
         <p>Pick Month : <input type="month"></p>
         <p>Pick Time : <input type="time"></p>
         <p>Pick Week : <input type="week"></p>
-        <p>Pick Number : <input type="number"></p>
-        <p>Pick Number from range : <input type="range"></p>
+        
+        <label for="points">Points:</label>
+  <input type="number" id="points" name="points" step="3">
+
+  <label for="range">Range: </label>
+  <input type="range" id="range" name="range" step="3">
         <p>Search : <input type="search"></p>
    
         <label for="phone">Enter your phone number:</label>
-        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br>
 
-        <p>Write URL : <input type="url"> </p>
+        <label for="homepage">Add your homepage:</label>
+        <input type="url" id="homepage" name="homepage"><br>
+        
         <input type="checkbox">I have read and Accept terms and Conditions<br>
         <input type="reset">
         <input type="submit">
