--- a/JavaScript Topics/dummyHtml.htm
+++ b/JavaScript Topics/dummyHtml.htm
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="basics8function.js"></script>
+    <title>JavaScript</title>
+    <script src="basics8func.js"></script>
 </head>
 
+
 <body>
-    <h1>Basic HTML Code to test JavaScript </h1>
+    <h1>Test JavaScript Concepts</h1>
 </body>
 
 </html>
