--- a/JavaScript Topics/dummyHtml.htm
+++ b/JavaScript Topics/dummyHtml.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
-    <script src="basics9scope.js"></script>
+    <script src="basics10string.js"></script>
 </head>
 
 
