--- a/Project Websites/Forms/loginPage.htm
+++ b/Project Websites/Forms/loginPage.htm
@@ -33,7 +33,7 @@
         <label for="login"></label>
         <br>
         <!-- forgot password -->
-        <a href="">Forgot Your password</a>
+        <a href="forgot.htm">Forgot Your password</a>
 
     </form>
 
