--- a/Project Websites/Forms/forgot.htm
+++ b/Project Websites/Forms/forgot.htm
@@ -7,7 +7,7 @@
     <title>Forgot Password</title>
 </head>
 
-<body>
+<body bgcolor="grey">
     <h1>Forgot Password</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto sint, illo praesentium laborum quibusdam quasi
         laudantium magni eaque temporibus. Sed.</p>
