--- a/Project Websites/Forms/loginPage.htm
+++ b/Project Websites/Forms/loginPage.htm
@@ -7,7 +7,7 @@
     <title>Login Page</title>
 </head>
 
-<body>
+<body bgcolor="grey">
     <form id="login_form">
         <h1>Welcome to Dummy WebSite</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugiat cum molestiae adipisci, incidunt
