registration page form

--- a/Project Websites/Forms/register.htm
+++ b/Project Websites/Forms/register.htm
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
 </head>
-<body>
-        <h1>Welcome to Website</h1>
+
+<body bgcolor="lightblue">
+    <h1>Welcome to Website</h1>
+
+    <form id="register_form">
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaitia fugit tempore corrupti, magni distinctio sint
+            consectetur reprehenderit commodi eveniet vero aliquid velit ea vitae, non molestiae assumenda numquam!</p>
+
+        <h2>Enter your details to Register to Website</h2>
+        <!-- First name -->
+        <label for="fname">First Name:</label>
+        <input type="text" id="fname" name="fname" placeholder="enter first name">
+        <br>
+        <!-- last name -->
+        <label for="lname">Last Name:</label>
+        <input type="text" id="lname" name="lname" placeholder="enter last name">
+        <br>
+        <!-- Phone number -->
+        <label for="phone">Phone Number:</label>
+        <input type="number" id="phone" name="phone" placeholder="enter phone number">
+        <br>
+        <!-- email -->
+        <label for="email">Email ID:</label>
+        <input type="text" id="email" name="email" placeholder="enter email id">
+        <br>
+        <!-- password -->
+        <label for="pwd">Password :</label>
+        <input type="password" id="pwd" name="pwd">
+        <br>
+        <!-- checkbox -->
+        <input type="checkbox" id="checkbox" name="checkbox">
+        <label for="checkbox">I Accept terms and conditions</label>
+        <br>
+        <!-- Register -->
+        <input type="submit" id="register-btn" name="register-btn" value="Register">
+        <label for="register"></label>
+        <br>
+
+    </form>
+    <br><br><br><br><br><br><br><br><br>
+    <footer>Thank you for visiting our website</footer>
 </body>
+
 </html>
