registration page form

--- a/Project Websites/Forms/register.htm
+++ b/Project Websites/Forms/register.htm
@@ -34,7 +34,7 @@
         <br>
         <!-- password -->
         <label for="pwd">Password :</label>
-        <input type="password" id="pwd" name="pwd">
+        <input type="password" id="pwd" name="pwd" placeholder="enter password">
         <br>
         <!-- checkbox -->
         <input type="checkbox" id="checkbox" name="checkbox">
