--- a/Project Websites/Project 0-SampleWebSite/index.htm
+++ b/Project Websites/Project 0-SampleWebSite/index.htm
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo WebSite</title>
+    <link rel="stylesheet" href="global.css">
 </head>
 
 <body>
     <div class="header">
         <h1>WebSite Main Page</h1>
         <nav>
-            <a href="">Logo</a>
+            <a href="home.htm">Logo</a>
             <ul>
                 <li>Home</li>
                 <li>Products</li>
